--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# mongodb start
+spring.data.mongodb.uri=mongodb://localhost:27017/test
+#spring.data.mongodb.username=fint
+#spring.data.mongodb.password=ewhafint
