--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8081
 # java mail sender start
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=serena35@ewhain.net
-spring.mail.password=kougqkmjiibwwkfg
+spring.mail.username=ewhafint@gmail.com
+spring.mail.password=pmqwnpmmunyhafps
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.transport.protocol=smtp
