application.properties 업데이트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.transport.protocol=smtp
 spring.mail.debug=true
 spring.mail.default.encoding=UTF-8
+
+# caver
+caver.kas.chainId=1001
+caver.kas.accessKeyId=KASK489KAHY54740WDAAL1PU
+caver.kas.secretAccessKey=KcCPXC2EiGze7svsh0v1w7tlnb9e-q23QoUW4yWs
+caver.kas.feePayer=0xECaf89B630EE5F86bE75Bd4944DB51E3B3809a16
